--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Juntos, ayudan a dar sentido al pasado para los que viven en el presente.">
 <meta name="author" content="aarqueologia">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="Sin_titulo1.css" rel="stylesheet">
+<link href="ccs.css" rel="stylesheet">
 <link href="index.css" rel="stylesheet">
 <script src="jquery-1.12.4.min.js"></script>
 <script src="war15.min.js"></script>
