--- a/acerca-de-aarqueología.html
+++ b/acerca-de-aarqueología.html
@@ -7,7 +7,7 @@
 Juntos, ayudan a dar sentido al pasado para los que viven en el presente.">
 <meta name="author" content="aarqueologia">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="Sin_titulo1.css" rel="stylesheet">
+<link href="ccs.css" rel="stylesheet">
 <link href="acerca-de-aarqueología.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
