--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 Juntos, ayudan a dar sentido al pasado para los que viven en el presente.">
 <meta name="author" content="aarqueologia">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="Sin_titulo1.css" rel="stylesheet">
 <link href="aarqueologia.css" rel="stylesheet">
+<link href="index.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
