--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Juntos, ayudan a dar sentido al pasado para los que viven en el presente.">
 <div class="col-1">
 <div class="col-1-padding">
 <div id="ar_texto4">
-<span style="color:#FFFFFF;font-family:'IBM Plex Sans';font-size:13px;">Acerca de aarqueología.com</span>
+<span href="./acerca-de-aarqueología.html" style="color:#FFFFFF;font-family:'IBM Plex Sans';font-size:13px;">Acerca de aarqueología.com</span>
 </div>
 </div>
 </div>
