--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Juntos, ayudan a dar sentido al pasado para los que viven en el presente.">
 <div class="col-1">
 <div class="col-1-padding">
 <div id="ar_texto4">
-<span style="color:#FFFFFF;font-family:'IBM Plex Sans';font-size:13px;"><a href="./acerca-de-aarqueología.html" class="arext">Acerca de aarqueología.com</a></span>
+<span style="color:#FFFFFF;font-family:'IBM Plex Sans';font-size:13px;"><a href="" class="arext">Acerca de aarqueología.com</a></span>
 </div>
 </div>
 </div>
