--- a/Ilustración.html
+++ b/Ilustración.html
@@ -6,6 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="aarqueologia.css" rel="stylesheet">
 <link href="Ilustración.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo&family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="cardcon1">
