--- a/Ilustración.html
+++ b/Ilustración.html
@@ -88,7 +88,7 @@
 </div>
 <div id="card9">
    <div id="Card9-card-body">
-      <img id="Card9-card-item0" src="images/pls.png" alt="" title="">
+      <img id="Card9-card-item0" src="images/plss.png" alt="" title="">
    </div>
 
 </div>
