--- a/Fotografía.html
+++ b/Fotografía.html
@@ -6,9 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="aarqueologia.css" rel="stylesheet">
 <link href="Fotografía.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Archivo&family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="cardcon1">
@@ -47,7 +44,7 @@
 <div class="row">
 <div class="col-1">
 <div id="texto2">
-<span style="color:#2C2C2C;font-family:Archivo;font-size:19px;">Fotografias puras e ilustre pero transparentes, desde el puesto de atrás, atravesando el cristal.</span>
+<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Fotografias puras e ilustre pero transparentes, desde el puesto de atrás, atravesando el cristal.</span>
 </div>
 </div>
 </div>
@@ -88,7 +85,7 @@
 </div>
 <div id="card9">
    <div id="Card9-card-body">
-      <img id="Card9-card-item0" src="images/plss.png" alt="" title="">
+      <img id="Card9-card-item0" src="images/pls.png" alt="" title="">
    </div>
 
 </div>
