--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div class="row">
 <div class="col-1">
 <div id="texto4">
-<span style="color:#202124;font-family:Archivo;font-size:19px;">Ubicaciones de encuentro </span>
+<span style="color:#202124;font-family:Archivo;font-size:19px;">Puntos de encuentro</span>
 </div>
 </div>
 </div>
