--- a/Diseño.html
+++ b/Diseño.html
@@ -68,6 +68,11 @@
 </div>
 </div>
 <div id="cardcon2">
+<div id="card8">
+   <div id="Card8-card-body">
+      <img id="Card8-card-item0" src="images/jovenes_ensenada.png" alt="" title="">
+   </div>
+</div>
 <div id="card6">
    <div id="Card6-card-body">
       <img id="Card6-card-item0" src="images/hand.png" alt="" title="">
