--- a/Diseño.html
+++ b/Diseño.html
@@ -68,11 +68,6 @@
 </div>
 </div>
 <div id="cardcon2">
-<div id="card8">
-   <div id="Card8-card-body">
-      <img id="Card8-card-item0" src="images/jovenes_ensenada.png" alt="" title="">
-   </div>
-</div>
 <div id="card6">
    <div id="Card6-card-body">
       <img id="Card6-card-item0" src="images/hand.png" alt="" title="">
@@ -95,7 +90,28 @@
    <div id="Card8-card-body">
       <img id="Card8-card-item0" src="images/graciasalavida.png" alt="" title="">
    </div>
+<div id="grid5">
+<div id="lygrid5">
+<div class="row">
+<div class="col-1">
+<div id="card7">
+   <div id="Card7-card-body">
+      <hr id="Card7-card-item0">
+   </div>
 
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="cardcon2">
+<div id="card8">
+   <div id="Card8-card-body">
+      <img id="Card8-card-item0" src="images/jovenes_ensenada.png" alt="" title="">
+   </div>
+</div>
+   <div id="Card8-card-body">
+      <img id="Card8-card-item0" src="images/numeralesonce.png" alt="" title="">
 </div>
 </div>
 <div id="grid4">
