--- a/Diseño.html
+++ b/Diseño.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Diseño</title>
+<title>aarqueología</title>
+<meta name="description" content="Se reúnen archivos artesanos eximios, unidos a la ciudad en diferentes puntos geográficos.">
+<meta name="author" content="aarqueologia.com">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="aarqueologia.css" rel="stylesheet">
-<link href="Diseño.css" rel="stylesheet">
+<link href="index.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo&family=Silkscreen&display=swap" rel="stylesheet">
@@ -36,7 +38,7 @@
 <div class="row">
 <div class="col-1">
 <div id="texto1">
-<span style="color:#202124;font-family:Archivo;font-size:19px;"><a href="./index.html" class="gris">39.948 u - 1894 (Ar)</a></span>
+<span style="color:#222222;font-family:Archivo;font-size:19px;">39.948 u - 1894 (Ar)</span>
 </div>
 </div>
 </div>
@@ -47,7 +49,7 @@
 <div class="row">
 <div class="col-1">
 <div id="texto2">
-<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Graficos a tonos de grises pero bien definidos, con el umbral que aparenta la peculiaridad del sello.</span>
+<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Se reúnen archivos artesanos eximios, unidos a la ciudad en diferentes puntos geográficos. Gráficos a tonos de grises pero bien definidos, con el umbral que aparenta la peculiaridad del sello. Ilustraciones con líneas de tinta dispersa que de vez en cuando, tienen vida. Fotografías puras e ilustre pero transparentes, desde el puesto de atrás, atravesando el cristal.</span>
 </div>
 </div>
 </div>
@@ -67,46 +69,86 @@
 </div>
 </div>
 </div>
-<div id="cardcon2">
-<div id="card6">
-   <div id="Card6-card-body">
-      <img id="Card6-card-item0" src="images/hand.png" alt="" title="">
-   </div>
-
-</div>
-<div id="card5">
-   <div id="Card5-card-body">
-      <img id="Card5-card-item0" src="images/11-11.png" alt="" title="">
-   </div>
-
-</div>
-<div id="card9">
-   <div id="Card9-card-body">
-      <img id="Card9-card-item0" src="images/baggage.png" alt="" title="">
-   </div>
-
-</div>
-<div id="card8">
-   <div id="Card8-card-body">
-      <img id="Card8-card-item0" src="images/graciasalavida.png" alt="" title="">
-   </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="cardcon2">
-<div id="card8">
-   <div id="Card8-card-body">
-      <img id="Card8-card-item0" src="images/jovenes_ensenada.png" alt="" title="">
-   </div>
-</div>
-   <div id="Card8-card-body">
-      <img id="Card8-card-item0" src="images/numeralesonce.png" alt="" title="">
-</div>
-</div>
 <div id="grid4">
 <div id="lygrid4">
+<div class="row">
+<div class="col-1">
+<div id="texto3">
+<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Mi trabajo actual, utiliza como descomposición los carteles unidos a los soportes verticales de energía. Carteles semejantes a archivos word, publicidad neta y gráfica. Unidos a la serigrafía, al tallado, a la xilografía. Manifestando una estética visual con recursos minimalistas, mis obras gráficas tienen como objetivo principal la divulgación de mi portafolio <u>aarqueología.com</u>. Mis ilustraciones son caracterizadas por tinta dispersa, sacudidas, breves y frecuentes. Fascinado por objetos inanimados y ambientales. Bosquejos internos, una descomposición de tipografías mentales, se actualizan al observar; publicidad, diseño gráfico aplicado a la realidad, carteles, rótulos.</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="grid7">
+<div id="lygrid7">
+<div class="row">
+<div class="col-1">
+<div id="texto5">
+<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Sin definición, pues, se multiplica. Minimalismo cotidiano, umbral y variopintos. Trascendiendo con creaciones precursoras, que de alguna forma, se unen de manera subconsciente.</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="grid8">
+<div id="lygrid8">
+<div class="row">
+<div class="col-1">
+<div id="card6">
+   <div id="Card6-card-body">
+      <hr id="Card6-card-item0">
+   </div>
+
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="grid10">
+<div id="lygrid10">
+<div class="row">
+<div class="col-1">
+<div id="texto4">
+<span style="color:#202124;font-family:Archivo;font-size:19px;">Ruta Ar</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="grid6">
+<div id="lygrid6">
+<div class="row">
+<div class="col-1">
+<div id="texto6">
+<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Encuentra obras gráficas en la ciudad de Ensenada.</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="cardcon2">
+<div id="card5">
+   <div id="Card5-card-body">
+      <div id="Card5-card-item0">Plaza de Las Tres Cabezas. Zona Centro, 22800 Ensenada, B.C.</div>
+      <hr id="Card5-card-item1">
+      <div id="Card5-card-item2">Alvarado 110. Zona Centro. 22800 Ensenada, B.C.</div>
+      <hr id="Card5-card-item3">
+      <div id="Card5-card-item4">De Las Redes 218, Playa Ensenada. 22880 Ensenada, B.C</div>
+      <hr id="Card5-card-item5">
+      <div id="Card5-card-item6">Bucaneros 5, Playa Ensenada. 22880 Ensenada, B.C.</div>
+      <hr id="Card5-card-item7">
+      <div id="Card5-card-item8">Av Rayon 141, Obrera. 22830 Ensenada, B.C.</div>
+      <hr id="Card5-card-item9">
+      <div id="Card5-card-item10">Av. Iturbide 170, Obrera. 22830 Ensenada, B.C.</div>
+      <hr id="Card5-card-item11">
+      <div id="Card5-card-item12">Miramar 666, Zona Centro, 22800 Ensenada, B.C.</div>
+   </div>
+
+</div>
+</div>
+<div id="grid9">
+<div id="lygrid9">
 <div class="row">
 <div class="col-1">
 </div>
@@ -117,12 +159,14 @@
 <div id="lygrid3">
 <div class="row">
 <div class="col-1">
+<div id="cardcon4">
 <div id="card1">
    <div id="Card1-card-body">
       <div id="Card1-card-item0">E-Mail: arqueologia@duck.com</div>
       <div id="Card1-card-item1">Número: +52 (646) 000-0000</div>
    </div>
 
+</div>
 </div>
 </div>
 </div>
