--- a/Diseño.html
+++ b/Diseño.html
@@ -105,13 +105,13 @@
 </div>
 <div id="card9">
    <div id="Card9-card-body">
-      <img id="Card9-card-item0" src="images/pls.png" alt="" title="">
+      <img id="Card9-card-item0" src="images/plss.png" alt="" title="">
    </div>
 
 </div>
 <div id="card8">
    <div id="Card8-card-body">
-      <img id="Card8-card-item0" src="images/pls.png" alt="" title="">
+      <img id="Card8-card-item0" src="images/plss.png" alt="" title="">
    </div>
 
 </div>
