--- a/index.html
+++ b/index.html
@@ -110,12 +110,18 @@
 <div class="row">
 <div class="col-1">
 <div id="texto4">
-<span style="color:#202124;font-family:Archivo;font-size:19px;">Puntos de encuentro</span>
+<span style="color:#202124;font-family:Archivo;font-size:19px;">Ruta Ar</span>
 </div>
 </div>
 </div>
 </div>
 </div>
+<div id="grid6">
+<div id="lygrid6">
+<div class="row">
+<div class="col-1">
+<div id="texto6">
+<span style="color:#2C2C2C;font-family:Archivo;font-size:17px;">Encuentra obras gráficas en la ciudad de Ensenada.</span>
 </div>
 </div>
 </div>
@@ -135,6 +141,8 @@
       <div id="Card5-card-item8">Av Rayon 141, Obrera. 22830 Ensenada, B.C.</div>
       <hr id="Card5-card-item9">
       <div id="Card5-card-item10">Av. Iturbide 170, Obrera. 22830 Ensenada, B.C.</div>
+      <hr id="Card5-card-item11">
+      <div id="Card5-card-item12">Miramar 666, Zona Centro, 22800 Ensenada, B.C.</div>
    </div>
 
 </div>
